tests/rosetta/out/Pascal/arithmetic-numbers.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/arithmetic-numbers.pas
arithmetic-numbers.pas(20,23) Error: Identifier not found "_appendList"
arithmetic-numbers.pas(20,47) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
